completed app and background

--- a/index.html
+++ b/index.html
@@ -2,9 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="src/assets/quiz.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quiz App</title>
+    <style>
+      body {
+        background-image: url("src/assets/brickwallBG.png");
+        background-size: cover; 
+        background-repeat: no-repeat;
+        background-attachment: fixed; 
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
